# OhSyTe

./: README.md
KT1/: Cargo.toml  main
KT1/src/: main.rs
KT2/src/: main.rs
KT3/src/: main.rs
KT4/: Cargo.toml
KT4/src/: main.rs
KT5/src/: main.rs
KT6/: Cargo.toml
KT6/src/: birthday.rs  event.rs  lib.rs
KT6/src/providers/: mod.rs
KT7/: Cargo.toml
KT7/src/: event.rs  lib.rs  main.rs
KT7/src/providers/: csv.rs  mod.rs  test.rs  text.rs
KT8/: Cargo.toml
KT8/src/: main.rs
KT8/src/providers/: sqlite.rs  test.rs  text.rs
dot_config_files/today/: add_data.sql  computing.txt  create.sql  events.db  history.csv  today.toml
today/: Cargo.toml
today/src/: birthday.rs  event.rs  filter.rs  lib.rs
today/src/providers/: csv.rs  mod.rs  sqlite.rs  text.rs  web.rs
